<resources>
    <string name="app_name">CrazyIdea</string>
    <string name="main_tablelayout_test_1">自定义控件</string>
    <string name="main_tablelayout_test_2">霓虹灯效果</string>
    <string name="main_tablelayout_test_3">计算器页面(失败)</string>
    <string name="main_tablelayout_test_4">各种TextView</string>
    <string name="main_tablelayout_test_4_1">带边框的文本</string>
    <string name="main_tablelayout_test_4_2">圆角边框，渐变背景的文本</string>
    <string name="main_tablelayout_test_4_3">登陆界面</string>
    <string name="grid_btn_clear">清除</string>
    <string name="textview_test_1">这是个测试</string>
    <string name="textview_test_2">这是个测试 android java android java真的是个测试</string>
    <string name="textview_test_3">邮件：lianghp@meixing.com,电话：18888888888</string>
    <string name="textview_test_4">用户名：</string>
    <string name="textview_test_4_1">请填写登录帐号</string>
    <string name="textview_test_4_2">帐号：</string>
    <string name="textview_test_4_3">年龄：</string>
    <string name="textview_test_4_4">生日：</string>
    <string name="textview_test_4_5">电话号码：</string>
    <string name="textview_test_4_6">请填写电话号码</string>
    <string name="togglebutton_test_5">横向排列</string>
    <string name="togglebutton_test_5_1">纵向排列</string>
    <string name="togglebutton_test_5_2">测试按钮0</string>
    <string name="togglebutton_test_5_3">测试按钮1</string>
    <string name="togglebutton_test_5_4">测试按钮2</string>
    <string name="togglebutton_test_5_0">横竖屏切换</string>
    <string name="textclock_test_0">时钟显示</string>
    <string name="textclock_test_1">开始</string>
    <string name="textclock_test_2">停止</string>
    <string name="imageview_test_0">增大透明度度</string>
    <string name="imageview_test_1">减小透明度度</string>
    <string name="imageview_test_2">下一张</string>
    <string name="imageview_test_3">图片查看器</string>
    </resources>
