<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ToggleButton
        android:id="@+id/tbtn_test_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/togglebutton_test_5"
        android:textOn="@string/togglebutton_test_5_1"
        android:checked="true"
        />
    <Switch
        android:id="@+id/swh_test_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/togglebutton_test_5"
        android:textOn="@string/togglebutton_test_5_1"
        android:checked="true"
        />
    <LinearLayout
        android:id="@+id/ll_test_0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/togglebutton_test_5_2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/togglebutton_test_5_3"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/togglebutton_test_5_4"/>
    </LinearLayout>

</LinearLayout>