<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding_3">
    <TextView
        android:id="@+id/tv_test_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_test_0"
        android:textSize="@dimen/font_size_24"
        android:text="@string/textview_test_4"/>
    <EditText
        android:id="@+id/et_test_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tv_test_4"
        android:hint="@string/textview_test_4_1"
        android:textSize="@dimen/font_size_24"/>
    <TextView
        android:id="@+id/tv_test_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_test_1"
        android:textSize="@dimen/font_size_24"
        android:text="@string/textview_test_4_2"
        android:layout_below="@+id/tv_test_0"
        android:layout_marginTop="@dimen/layout_padding_5"/>
    <EditText
        android:id="@+id/et_test_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:layout_toRightOf="@+id/tv_test_4"
        android:layout_below="@+id/et_test_0"
        android:textSize="@dimen/font_size_24"/>
    <TextView
        android:id="@+id/tv_test_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_test_2"
        android:textSize="@dimen/font_size_24"
        android:text="@string/textview_test_4_3"
        android:layout_below="@+id/tv_test_1"
        android:layout_marginTop="@dimen/layout_padding_5"/>
    <EditText
        android:id="@+id/et_test_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_toRightOf="@+id/tv_test_4"
        android:layout_below="@+id/et_test_1"
        android:textSize="@dimen/font_size_24"/>
    <TextView
        android:id="@+id/tv_test_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_test_3"
        android:textSize="@dimen/font_size_24"
        android:text="@string/textview_test_4_4"
        android:layout_below="@+id/tv_test_2"
        android:layout_marginTop="@dimen/layout_padding_5"/>
    <EditText
        android:id="@+id/et_test_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_test_4"
        android:layout_below="@+id/et_test_2"
        android:textSize="@dimen/font_size_24"
        android:inputType="date"/>
    <TextView
        android:id="@+id/tv_test_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_test_4"
        android:textSize="@dimen/font_size_24"
        android:text="@string/textview_test_4_5"
        android:layout_below="@+id/tv_test_3"
        android:layout_marginTop="@dimen/layout_padding_5"/>
    <EditText
        android:id="@+id/et_test_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_test_4"
        android:layout_below="@+id/et_test_3"
        android:hint="@string/textview_test_4_6"
        android:textSize="@dimen/font_size_24"
        android:inputType="phone"/>

</RelativeLayout>