<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_test_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_20"
        android:text="@string/textview_test_1"
        android:drawableEnd="@android:drawable/stat_sys_warning"/>
    <TextView
        android:id="@+id/tv_test_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_test_0"
        android:ellipsize="middle"
        android:textAllCaps="true"
        android:singleLine="true"
        android:textSize="@dimen/font_size_20"
        android:text="@string/textview_test_2"/>
    <TextView
        android:id="@+id/tv_test_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_test_1"
        android:textSize="@dimen/font_size_15"
        android:autoLink="email|phone"
        android:text="@string/textview_test_3"/>
    <TextView
        android:id="@+id/tv_test_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_40"
        android:layout_below="@id/tv_test_2"
        android:text="@string/textview_test_1"
        android:textColor="#f00"
        android:shadowColor="#00f"
        android:shadowDx="10.0"
        android:shadowDy="8.0"
        android:shadowRadius="3.0"/>
    <TextView
        android:id="@+id/tv_test_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_test_3"
        android:password="true"
        android:textSize="@dimen/font_size_20"
        android:text="@string/textview_test_1"/>
    <CheckedTextView
        android:id="@+id/tv_test_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_test_4"
        android:textSize="@dimen/font_size_15"
        android:text="@string/textview_test_1"
        android:checkMark="@android:drawable/star_on"/>
    <TextView
        android:id="@+id/tv_test_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_24"
        android:text="@string/main_tablelayout_test_4_1"
        android:layout_below="@+id/tv_test_5"
        android:background="@drawable/bg_border"/>
    <TextView
        android:id="@+id/tv_test_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_24"
        android:text="@string/main_tablelayout_test_4_2"
        android:layout_below="@+id/tv_test_6"
        android:background="@drawable/bg_border_1"/>

</RelativeLayout>